# verka

./: .gitignore  Cargo.toml  DESIGN.md  ISOLATION.md  README.md  build_all.sh  diary.wiki  go.mod  go.sum  ideas.wiki  todo.wiki  wishlist.wiki
cmd/llaundry/: artifacts.go  exec.go  graph.go  init.go  main.go  mcp.go  run.go  serve.go  show.go
crates/llaundry-core/: Cargo.toml
crates/llaundry-core/src/: lib.rs  store.rs
crates/llaundry-review/: Cargo.toml
crates/llaundry-review/src/: lib.rs
crates/llaundry-work/: Cargo.toml
crates/llaundry-work/src/: config.rs  lib.rs
crates/llaundry-work/src/backend/: claude.rs  codex.rs
designs/: CANDIDATE_INTEGRATION_LIFECYCLE.md  DURABLE_EXECUTION_ATTEMPTS.md  HUMAN_REVIEW_GATING.md  ISOLATED_WORKTREE_EXECUTION.md  PARALLEL_VARIANTS.md  SEPARATE_APPLICATIONS.md
docs/: walkthrough.md
driva/: Cargo.toml  DESIGN.md  README.md  STAGE2_IMPLEMENTATION.md  todo.wiki
driva/docs/: cli.md
driva/src/: bwrap.rs  config.rs  docker.rs  lib.rs  main.rs  podman.rs  runtime.rs  session.rs
driva/templates/: claude-exec.toml  claude.toml  codex-exec.toml  codex-local.toml  codex-runtime.toml  codex.toml  rust.toml  sbt.toml
driva/tests/: bwrap.rs  cli_docs.rs  docker.rs  launch_options.rs  path.rs  podman.rs  policy.rs  runtime.rs  session.rs  templates.rs
genta/: Cargo.toml
genta/src/: agent.rs  appserver.rs  event.rs  lib.rs  main.rs  render.rs
internal/codeanalysis/: codeanalysis.go  golang.go
internal/graph/: graph.go  graph_test.go
internal/mcp/: ask_user.go  impact_tools.go  responses.go  run_tools.go  run_tools_test.go  server.go  tools.go  tools_test.go
internal/model/: hash.go  hash_test.go  node.go
internal/orchestrator/: config.go  orchestrator.go  orchestrator_test.go  stream.go
internal/orchestrator/prompts/: system.md
internal/runner/: build.go  runner.go  verify.go
internal/store/: migrations.go  sqlite.go  sqlite_test.go  store.go
internal/store/migrations/: 0001_init.sql  0002_symbol_index.sql
internal/web/: server.go
internal/web/static/: app.js  index.html  style.css
internal/workspace/: assemble.go  files.go  files_test.go  workspace.go
linka/: Cargo.toml  DESIGN.md  TASKS.md
linka-viz/: Cargo.toml
linka-viz/src/: main.rs  viz.html
linka/src/: candidate.rs  git.rs  journal.rs  lib.rs  main.rs  model.rs  ops.rs  pairing.rs  store.rs  vcs.rs
linka/src/candidate/: operations.rs  publication.rs  storage.rs  tests.rs
llaundry/: Cargo.toml
llaundry-viz/: Cargo.toml
llaundry-viz/src/: main.rs
llaundry-work/: Cargo.toml  DESIGN.md  README.md
llaundry-work-reference/: Cargo.toml  README.md
llaundry-work-reference/src/: backend.rs  config.rs  harness.rs  lib.rs  protocol.rs  review.rs
llaundry-work-reference/src/backend/: claude.rs  codex.rs
llaundry-work/src/: harness.rs  harness_tests_reference.rs  lib.rs  protocol.rs  review.rs
llaundry/src/: main.rs  ops.rs  store.rs
nota/: Cargo.toml  DESIGN.md  PROTOTYPE_V1.md
nota/src/: git.rs  lib.rs  main.rs  providers.rs  review.rs
nota/tests/: prototype_v1.rs
orka/: Cargo.toml  DESIGN.md  README.md  SIMPLIFICATION_TASKS.md  TASKS.md
orka-web/: Cargo.toml  README.md
orka-web/src/: index.html  main.rs
orka/src/: access.rs  agent.rs  attempt.rs  candidate.rs  config.rs  driva_exec.rs  engine.rs  events.rs  executor.rs  fakes.rs  file_changes.rs  harness_tests_reference.rs  input.rs  lib.rs  linka_graph.rs  linka_work.rs  main.rs  outcome.rs  ports.rs  review.rs  review_worktree.rs  workspace.rs
orka/tests/: cli.rs  engine_e2e.rs  linka_graph.rs  linka_work.rs  review.rs
orka/tests/common/: mod.rs
src/: config.rs  git.rs  lib.rs  main.rs  model.rs  ops.rs  pairing.rs  store.rs  vcs.rs
styra/: Cargo.toml  DESIGN.md  README.md  TASKS.md  ideas.wiki
styra-server/: Cargo.toml
styra-server/examples/: headless_session.rs
styra-server/src/: api.rs  client.rs  journal.rs  lib.rs  main.rs  server.rs  session.rs  types.rs
styra-server/tests/: codex_output_fixtures.rs
styra-server/tests/fixtures/: codex_exec_command.jsonl
styra/examples/: headless_session.rs
styra/src/: agent.rs  api.rs  app.rs  appserver.rs  client.rs  event.rs  journal.rs  lib.rs  main.rs  paths.rs  server.rs  session.rs  ui.rs
styra/tests/: codex_output_fixtures.rs
tests/: architecture.rs
