[package]
name = "llaundry"
version = "0.1.0"
edition = "2021"
description = "A content-addressed, immutable graph database for LLM-assisted development"

[workspace]
members = ["crates/llaundry-core", "crates/llaundry-work", "crates/llaundry-review"]
resolver = "2"

[lib]
name = "llaundry"
path = "src/lib.rs"

[[bin]]
name = "llaundry"
path = "src/main.rs"

[[bin]]
name = "llaundry-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "llaundry-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "llaundry-work"
path = "src/bin/work.rs"

[[bin]]
name = "llaundry-viz"
path = "src/bin/viz.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
toml = "0.8"
ulid = "1"
llaundry-core = { path = "crates/llaundry-core" }
llaundry-work = { path = "crates/llaundry-work" }
llaundry-review = { path = "crates/llaundry-review" }
