# PARKED: this inherited source is being narrowed to orchestration. Container
# lifecycle moves to Driva and review functionality moves to Nota.

[package]
name = "orka"
version = "0.1.0"
edition = "2021"
description = "Execution harness/orchestrator for linka task graphs (parked)"

[[bin]]
name = "orka"
path = "src/bin/orka.rs"

[[bin]]
name = "orka-exec"
path = "src/bin/orka-exec.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = "1"
linka = { path = "../linka" }
