[package]
name = "orka-web"
version = "0.1.0"
edition = "2021"
description = "A local web interface for an Orka workbench"

[[bin]]
name = "orka-web"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
linka = { path = "../linka" }
orka = { path = "../orka" }
