[package]
name = "orka"
version = "0.1.0"
edition = "2021"
description = "Graph-driven agent orchestration over Linka and Driva"

[lib]
name = "orka"
path = "src/lib.rs"

[[bin]]
name = "orka"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = "1"
linka = { path = "../linka" }
driva = { path = "../driva" }
nota = { path = "../nota" }
