[package]
name = "styra-server"
version = "0.1.0"
edition = "2021"
description = "Local server and client library for interactive, isolated agent sessions"

[[bin]]
name = "styra-server"
path = "src/main.rs"

[lib]
name = "styra_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
driva = { path = "../driva" }
genta = { path = "../genta" }
