[package]
name = "styra"
version = "0.1.0"
edition = "2021"
description = "An interactive, isolated agent session runner with a terminal interface"

[[bin]]
name = "styra"
path = "src/main.rs"

[lib]
name = "styra"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
driva = { path = "../driva" }
genta = { path = "../genta" }
