[package]
name = "styra"
version = "0.1.0"
edition = "2021"
description = "A terminal interface for interactive, isolated agent sessions"

[[bin]]
name = "styra"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
styra-server = { path = "../styra-server" }
