[package]
name = "llaundry-core"
version = "0.1.0"
edition = "2021"
description = "Execution- and review-agnostic llaundry work-provenance graph contracts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha1 = "0.10"
toml = "0.8"
ulid = "1"
clap = { version = "4", features = ["derive"] }
