[package]
name = "llaundry-work"
version = "0.1.0"
edition = "2021"
description = "Execution attempts and isolated workspace contracts for llaundry"

[dependencies]
llaundry-core = { path = "../llaundry-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
